--- a/index.html
+++ b/index.html
@@ -12,17 +12,48 @@
     <div class="main_content">
         <article class="intro">
             <h2>My Best Work</h2>
+            <img src="img/splash.jpg" 
+            srcset="img/splash@0.5x.jpg 512w,
+                    img/splash@0.75x.jpg 769w,
+                    img/splash.jpg 1024w"
+            sizes="(max-width: 958px) 96vw,
+                    (max-width: 1022px) 80vw,
+                   1024px"
+                    alt="splash">
+                    <!-- <img src="img/placeholder.png" alt=""> -->
             <p>I make websites for clients.</p>
         </article>
 
         <div class="grid-row">
             <article class="secondary">
                 <h3>My Best Logo</h3>
+                <img src="img/acme-aircraft-logo.png" 
+                srcset="img/acme-aircraft-logo@0.5x.png 222w,
+                        img/acme-aircraft-logo@0.75x.png 332w,
+                        img/acme-aircraft-logo.png 443w"
+                sizes="(max-width:420px) 84vw,
+                        (max-width:756px) 39vw,
+                        (max-width:957px) 41vw,
+                        (max-width:1022px) 33vw,
+                443px"
+                        alt="logo">
+                    <!-- <img src="img/placeholder.png" alt=""> -->
                 <p>I made a logo for a client.</p>
             </article>
 
             <article class="secondary">
                 <h3>My Best Trimming</h3>
+                <img src="img/Eggs-Thinkstock-92842913.jpg" 
+                srcset="img/Eggs-Thinkstock-92842913@0.5x.jpg 221w,
+                img/Eggs-Thinkstock-92842913@0.75x.jpg 332w,
+                img/Eggs-Thinkstock-92842913.jpg 443w"
+                sizes="(max-width:420px) 84vw,
+                        (max-width:756px) 39vw,
+                        (max-width:957px) 41vw,
+                        (max-width:1022px) 33vw,
+                443px"
+                alt="eggs">
+                <!-- <img src="img/placeholder.png" alt=""> -->
                 <p>I trimmed this shape for a client.</p>
             </article>
         </div>
